--- a/index.html
+++ b/index.html
@@ -38,10 +38,9 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>Akka</h1>
-                                        <h3>Акторы для JVM</h3>
-					<p>Тулкит для построения параллельных, распределенных и отказоустойчивых приложений</p>
-					<p><small>Слайды: <a href="http://maxcom.github.io/akka-intro-slides/">http://maxcom.github.io/akka-intro-slides/</a></small></p>
+					<h1>Akka и акторы</h1>
+					<p>Модель акторов и её применение для построения распределенных и отказоустойчивых приложений</p>
+					<p><small>Слайды: <a href="http://maxcom.github.io/akka-intro-slides/">http://maxcom.github.io/akka-intro-2017/</a></small></p>
 				</section>
 
 				<section>
@@ -50,10 +49,9 @@
                                           <li>Актор — асинхронный объект.</li>
 					  <li>Диспетчеры.</li>
 					  <li>Обработка исключительных ситуаций.</li>
-					  <li>Отсутствие гарантий доставки сообщений.</li>
+					  <li>Большой рассказ о гарантиях.</li>
 					  <li>CircuitBreaker.</li>
 					  <li>Регулировка скорости обработки.</li>
-					  <li>Коротко что еще есть в Akka: роутеры, IO/HTTP, Persistence, Cluster, Reactive Streams.</li>
 					  <li>Проблемы.</li>
 					  <li>Вопросы.</li>
 					</ol>
@@ -163,6 +161,8 @@ object Main extends App {
 						<li>Классический RPC — удаленные вызовы подобны локальным
 						<li>Акторы — локальные «вызовы» подобны удаленным
 					</ul>
+					<p>На заметку: мы не используем remote actors; но принципиально
+					   это ничего не меняет</p>
 				</section>
 
 
@@ -267,14 +267,14 @@ context.watch(anotherActorRef)
 				<section>
 					<h2>Сказка о транзакциях</h2>
 					<ul>
-						<li>Транзакции спасут не только БД, но и нас
+						<li>Транзакции спасут не только данные, но и нас
 						<li>Двухфазный коммит спасёт вообще всех
-						<li>Протокол двухфазного коммити кофемашины и СУБД
 					</ul>
 				</section>
 
 				<section>
-					<p>Что значит ошибка сети или таймаут?</p>
+					<p>Протокол двухфазного коммита кофемашины и СУБД</p>
+					<p class="fragment">Что значит ошибка сети или таймаут?</p>
 					<ul>
 						<li class="fragment">Транзакция не прошла
 						<li class="fragment">Транзакция прошла, но не прошло подтверждение
@@ -292,37 +292,40 @@ context.watch(anotherActorRef)
 							консистентна только в конечном счете
 						<li class="fragment">Блокировок нет
 					</ul>
+				</section>
 
 				<section>
 					<h2>Вернемся к Akka</h2>
 					<p>Сбой нельзя детектировать.<p>
 					<p>Сбой и таймаут не отличимы.</p>
-					<p class="fragment">Решение: протоколы с подтверждением успеха обработки.<p>
-					<p class="fragment">Результат: подтвержденный успех или timeout.</p>
-					<p class="fragment">Каждое сообщение должно иметь unique id (например UUID).
-					                    В потоках еще применяют sequence number'а.
+					<p>Акторы действуют независимо, транзакций и блокировок нет</p>
 				</section>
 
 				<section>
-					<p><strong>«At least once delivery»</strong> — retry при таймауте.
-					<p class="fragment"><strong>«Exactly once delivery»</strong> — retry при таймауте + фильтрация дублей получателем.
+					<p>Не нужно решать проблему ненадежной доставки. Вместо этого
+						нужно обеспечить требуемые гарантии при сбоях.</p>
+					<p class="fragment">А еще доставка внутри JVM гарантирована.</p>
 				</section>
 
 				<section>
-					<p>Сложные схемы доставки обычно не нужны на каждом плече.</p>
+					<h2>Что обычно можно гарантировать</h2>
+					<p>Положительный ответ только после записи в хранилище или выполнения действия</p>
+					<p>Откладывание выполнения с гарантиями - передача "эстафетной палочки"
 				</section>
 
 				<section>
-					<h3>«End-to-end» принцип</h3>
-					<p>Как в TCP: клиент →  цепочка акторов → получатель</p>
-					<p>Клиент ждет подтверждения от получателя. Остальные акторы в цепочке не контролируют
-					доставку.</p>
+					<h2>Команды и события</h2>
+					<ul>
+						<li>Команда: сделай что-то. Выполняем её с гарантиями.
+						<li class="fragment">Событие: что-то произошло, реагируй на это. Можем пропустить,
+							если потом можем это компенсировать.
+					</ul>
 				</section>
 
 				<section>
 					<h3>«Happy path &amp; self heal»</h3>
-					<p>Применяется при пакетной обработке.</p>
-					<p class="fragment">«Happy path» — игнорируем сбои при первичной обработке.</p>
+					<p>Пример в indexer-ng.</p>
+					<p class="fragment">«Happy path» — игнорируем сбои при первичной обработке события.</p>
 					<p class="fragment">«Self heal» – периодически проводим сверку и запускаем в обработку то, что
 					не смогли обработать ранее.</p>
 				</section>
